--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Welcome to my Weather App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a City" required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Manila</h1>
+        <p>Sunday 8:59, overcast clouds <br />Humidity: 82%, Wind: 5.14km/h</p>
+      </div>
+      <div>☀️25°C</div>
+    </main>
   </body>
 </html>
