--- a/index.html
+++ b/index.html
@@ -3,21 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a City" required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Manila</h1>
-        <p>Sunday 8:59, overcast clouds <br />Humidity: 82%, Wind: 5.14km/h</p>
-      </div>
-      <div>☀️25°C</div>
-    </main>
+    <div class="app-body">
+      <header>
+        <form>
+          <input
+            type="search"
+            class="search-form-input"
+            placeholder="Enter a City"
+            required
+          />
+          <input type="submit" class="search-form-button" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div class="app-city">
+          <h1>Manila</h1>
+        </div>
+
+        <div class="app-weather-details">
+          <p>
+            Sunday 8:59, overcast clouds <br />Humidity: <strong> 82%</strong>,
+            Wind: <strong>5.14km/h</strong>
+          </p>
+        </div>
+
+        <div class="app-weather-temp">☀️25</div>
+        <div class="temperature-unit">°C</div>
+      </main>
+      <footer>
+        <br />
+        This project was coded by Rosario Ilagan, and is open sourced on
+        <a href="https://github.com/rosa-sar/rosario-weather-app">Github</a>
+      </footer>
+    </div>
   </body>
 </html>
