--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Lora:ital,wght@0,400..700;1,400..700&family=Pacifico&family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
+
     <title>Weather App</title>
   </head>
   <body>
@@ -37,8 +38,11 @@
           </p>
         </div>
 
-        <div class="app-weather-temp">☀️25</div>
-        <div class="temperature-unit">°C</div>
+        <div class="app-weather-temp">
+          <span class="current-temperature-icon">☀️</span>
+          <span class="current-temperature-value">25</span>
+          <span class="temperature-unit">°C</span>
+        </div>
       </main>
       <footer>
         <br />
