--- a/index.html
+++ b/index.html
@@ -41,13 +41,20 @@
         <div class="app-weather-temp">
           <span class="current-temperature-icon">☀️</span>
           <span class="current-temperature-value">25</span>
-          <span class="temperature-unit">°C</span>
+          <span class="temperature-unit"> <strong>°C</strong></span>
         </div>
       </main>
       <footer>
         <br />
-        This project was coded by Rosario Ilagan, and is open sourced on
-        <a href="https://github.com/rosa-sar/rosario-weather-app">Github</a>
+        This project was coded by
+        <a href="https://github.com/rosa-sar/" target="_blank"
+          >Rosario Ilagan </a
+        >, and is open sourced on
+        <a
+          href="https://github.com/rosa-sar/rosario-weather-app"
+          target="_blank"
+          >Github</a
+        >
       </footer>
     </div>
   </body>
