--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
           <div class="app-weather-temp">
             <span class="current-temperature-icon">☀️</span>
-            <span class="current-temperature-value">25</span>
+            <span class="current-temperature-value" id="temperature">25</span>
             <span class="temperature-unit"> <strong>°C</strong></span>
           </div>
         </div>
