--- a/index.html
+++ b/index.html
@@ -42,9 +42,16 @@
             </div>
           </div>
           <div class="app-weather-temp">
-            <span class="current-temperature-icon">☀️</span>
-            <span class="current-temperature-value" id="temperature"></span>
-            <span class="temperature-unit"> <strong>°C</strong></span>
+            <div class="current-temperature-icon">
+              <div id="icon">
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="current-temperature-value" id="temperature"></div>
+            <div class="temperature-unit"><strong>°C</strong></div>
           </div>
         </div>
       </main>
