--- a/index.html
+++ b/index.html
@@ -43,12 +43,7 @@
           </div>
           <div class="app-weather-temp">
             <div class="current-temperature-icon">
-              <div id="icon">
-                <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
-                  alt=""
-                />
-              </div>
+              <div id="icon"></div>
             </div>
             <div class="current-temperature-value" id="temperature"></div>
             <div class="temperature-unit"><strong>°C</strong></div>
@@ -60,12 +55,16 @@
         This project was coded by
         <a href="https://github.com/rosa-sar/" target="_blank"
           >Rosario Ilagan </a
-        >, and is open sourced on
+        >, open sourced on
         <a
           href="https://github.com/rosa-sar/rosario-weather-app"
           target="_blank"
           >Github</a
         >
+        and is hosted on
+        <a href="https://rosario-weather-app.netlify.app/" target="_blank"
+          >Netlify
+        </a>
       </footer>
     </div>
     <script src="src/app.js"></script>
