--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
             <div class="temperature-unit"><strong>°C</strong></div>
           </div>
         </div>
+        <div class="weather-forecast">
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sun</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">14º</div>
+              <div class="weather-forecast-temperatures">10º</div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         <br />
