--- a/index.html
+++ b/index.html
@@ -54,7 +54,69 @@
             <div class="weather-forecast-date">Sun</div>
             <div class="weather-forecast-icon">🌤️</div>
             <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">14º</div>
+              <div class="weather-forecast-temperature">
+                <strong>14º</strong>
+              </div>
+              <div class="weather-forecast-temperatures">10º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Mon</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>14º</strong>
+              </div>
+              <div class="weather-forecast-temperatures">10º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>14º</strong>
+              </div>
+              <div class="weather-forecast-temperatures">10º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Wed</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>14º</strong>
+              </div>
+              <div class="weather-forecast-temperatures">10º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Thu</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>14º</strong>
+              </div>
+              <div class="weather-forecast-temperatures">10º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Fri</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>14º</strong>
+              </div>
+              <div class="weather-forecast-temperatures">10º</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sat</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>14º</strong>
+              </div>
               <div class="weather-forecast-temperatures">10º</div>
             </div>
           </div>
