--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <main>
         <div class weather-app-data>
           <div>
-            <h1 class="app-city" id="city"></h1>
+            <em><h1 class="app-city" id="city"></h1></em>
 
             <div class="app-weather-details">
               <p>
@@ -122,22 +122,24 @@
           </div>
         </div>
       </main>
-      <footer>
-        <br />
-        This project was coded by
-        <a href="https://github.com/rosa-sar/" target="_blank"
-          >Rosario Ilagan </a
-        >, open sourced on
-        <a
-          href="https://github.com/rosa-sar/rosario-weather-app"
-          target="_blank"
-          >Github</a
-        >
-        and is hosted on
-        <a href="https://rosario-weather-app.netlify.app/" target="_blank"
-          >Netlify
-        </a>
-      </footer>
+      <em
+        ><footer>
+          <br />
+          This project was coded by
+          <a href="https://github.com/rosa-sar/" target="_blank"
+            >Rosario Ilagan </a
+          >, open sourced on
+          <a
+            href="https://github.com/rosa-sar/rosario-weather-app"
+            target="_blank"
+            >Github</a
+          >
+          and is hosted on
+          <a href="https://rosario-weather-app.netlify.app/" target="_blank"
+            >Netlify
+          </a>
+        </footer></em
+      >
     </div>
     <script src="src/app.js"></script>
   </body>
