--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             >Github</a
           >
           and is hosted on
-          <a href="https://rosario-weather-app.netlify.app/" target="_blank"
+          <a href="https://rosario-app-forecast.netlify.app/" target="_blank"
             >Netlify
           </a>
         </footer></em
